--- a/styles.css
+++ b/styles.css
@@ -271,6 +271,7 @@
   z-index: 2;
   color: #fff;
   text-decoration: none;
+  top:400px;
 }
 
 .main__btn:after {
@@ -321,7 +322,7 @@
 
   .main__content h1 {
     font-size: 2.5rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
 
   .main__content h2 {
@@ -329,7 +330,6 @@
   }
 
   .main__content p {
-    margin-top: 1rem;
     font-size: 1.5rem;
   }
 }
@@ -345,7 +345,7 @@
   }
 
   .main__content p {
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-size: 1.5rem;
   }
 
@@ -567,6 +567,7 @@
   color: #e9e9e9;
   transition: 0.3s ease-out;
 }
+
 /*login section*/
 body {
   font-family: Arial, sans-serif;
@@ -641,7 +642,6 @@ footer {
   width: 100%;
 }
 
-
 /* Social Icons */
 .social__icon--link {
   color: #fff;
@@ -690,20 +690,15 @@ footer {
     padding-top: 2rem;
   }
 
-  #footer__logo {
-    margin-bottom: 2rem;
-  }
 
-  .website__rights {
-    margin-bottom: 2rem;
-  }
+
 
   .footer__link--wrapper {
-    flex-direction: column;
+    flex-direction: center;
   }
 
   .social__media--wrap {
-    flex-direction: column;
+    flex-direction: center;
   }
 }
 
@@ -713,4 +708,51 @@ footer {
     padding: 10px;
     width: 100%;
   }
+}
+
+/* motives  */
+.motives {
+  background: #141414;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.motives h1 {
+  background-color: #ff8177;
+  background-image: linear-gradient(
+    to right,
+    #ff8177 0%,
+    #ff867a 0%,
+    #ff8c7f 21%,
+    #f99185 52%,
+    #cf556c 78%,
+    #b12a5b 100%
+  );
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  margin-bottom: 5rem;
+  font-size: 2.5rem;
+}
+p {
+  color: #fff;
+}
+
+.motives__container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+.motives__card p {
+  position: absolute;
+  top: 300px;
+  left: 700px;
+  right: 300px
 }
